--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ProjectId": "swd63bpfc2026"
+  "ProjectId": "swd63bpfc2026",
+  "PosterBucket": "swd63bpfc2026rav2",
+  "GuestListBucket":  "swd63bpfc2026glrav1"
 }
